--- a/package.json
+++ b/package.json
@@ -4,6 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "demo": "tsx src/demo-agent.ts",
+    "demo:marketplace": "tsx src/demo-marketplace.ts",
+    "demo:skale-city": "tsx src/demo-skale-city.ts",
+    "agent:fast": "tsx agents/worker.ts fast",
+    "agent:quality": "tsx agents/worker.ts quality",
+    "agent:budget": "tsx agents/worker.ts budget",
+    "frontend": "cd frontend && npm run dev",
+    "check-balance": "tsx check-balance.ts",
+    "compile": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,11 +30,17 @@
     "@hono/node-server": "^1.19.9",
     "@langchain/anthropic": "^1.3.17",
     "@langchain/core": "^1.1.24",
+    "@skalenetwork/bite": "^0.7.1",
     "@x402/core": "^2.3.1",
     "@x402/evm": "^2.3.1",
     "@x402/hono": "^2.3.0",
     "dotenv": "^17.2.4",
     "hono": "^4.11.9",
     "viem": "^2.45.3"
+  },
+  "devDependencies": {
+    "@types/node": "^25.2.3",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   }
 }
